update homepage text

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="fade-in">🔔 Bell AI Fellows</h1>
-                <p class="hero-subtitle fade-in fade-in-delay-1">Voice-First AI Fellowship for Builders, Creators, and Dreamers at the Edge of Conversation, Emotion & Automation</p>
+                <p class="hero-subtitle fade-in fade-in-delay-1">Join our Voice-First AI Fellowship for Builders, Creators, and Dreamers at the Edge of Conversation, Emotion & Automation</p>
                 <div class="fade-in fade-in-delay-2" style="background: linear-gradient(135deg, rgba(255, 255, 255, 0.95) 0%, rgba(248, 250, 252, 0.95) 100%); padding: 32px; border-radius: 20px; border: 1px solid rgba(226, 232, 240, 0.8); margin: 2rem 0; text-align: left; max-width: 600px; margin-left: auto; margin-right: auto; backdrop-filter: blur(10px); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);">
                     <h3 style="color: #0f172a; margin-bottom: 1rem; font-size: 1.25rem;">🎙️ What happens when you call:</h3>
                     <ul style="list-style: none; padding: 0; margin: 0; color: #475569; line-height: 1.6;">
