added privacy note

--- a/index.html
+++ b/index.html
@@ -340,11 +340,12 @@
       </a>
       <p style="margin-top: 1.5rem; opacity: .8;">You'll instantly reach an AI-led voice interview. No resume required.</p>
       <p style="margin-top: .75rem; opacity: .8;"><strong>Applications close August 15 • Cohort starts August 25</strong></p>
-    </div>
+      </div>
   </section>
 
   <footer class="footer">
     <div class="container">
+      <p>We take privacy seriously. Your responses are stored to improve your experience, but never shared without your permission.</p>
       <p>
         <a href="https://aughthour.com/privacy-policy/">Privacy Policy</a>
         <a href="https://aughthour.com/terms-of-service/">Terms of Service</a>
