--- a/sponsorships.html
+++ b/sponsorships.html
@@ -369,7 +369,7 @@
   <div class="container">
     <section class="section" id="contact">
       <h2>Start a Conversation</h2>
-      <p>Ready to support the future of voice-first AI? Reach out directly to discuss partnership opportunities and learn more about how we can work together. If you don't have our contact info, connect with us on LinkedIn:</p>
+      <p>Ready to support the future of voice-first AI? Reach out directly to discuss partnership opportunities and learn more about how we can work together. If you don't have contact info, connect with us on LinkedIn:</p>
       
       <div class="two-column" style="margin-top: 3rem;">
         <div class="feature-card" style="text-align: center; padding: 2.5rem;">
