--- a/index.html
+++ b/index.html
@@ -191,31 +191,12 @@
     .apply-section p { color: #e2e8f0; font-size: 1.15rem; }
 
     /* Footer */
-    .footer { 
-      text-align: center; padding: 32px 0 24px 0; background: #f8fafc; 
-      border-top: 1px solid #e2e8f0; 
-    }
-    .footer-content {
-      display: flex; flex-direction: column; align-items: center; gap: 12px;
-    }
-    .footer-privacy {
-      color: #64748b; font-size: 0.9rem; margin: 0; max-width: 600px;
-      line-height: 1.5;
-    }
-    .footer-links { 
-      display: flex; gap: 32px; align-items: center; justify-content: center;
-    }
-    .footer-links a { 
-      color: #475569; text-decoration: none; font-size: 0.9rem; font-weight: 500;
-      transition: color 0.2s ease;
-    }
-    .footer-links a:hover { color: #0f172a; }
-    .footer-divider {
-      width: 1px; height: 16px; background: #cbd5e1;
-    }
-    .footer-copyright { 
-      color: #94a3b8; font-size: 0.85rem; margin: 0;
-    }
+    .footer { text-align: center; padding: 40px 0; background: #f8fafc; border-top: 1px solid #e2e8f0; }
+    .footer p { color: #64748b; margin-bottom: 0.75rem; font-size: 1rem; }
+    .footer a { color: #0f172a; text-decoration: none; margin: 0 1rem; font-weight: 500; }
+    .footer a:hover { text-decoration: underline; }
+    .footer-links { margin: 0.75rem 0; }
+    .footer-copyright { margin-top: 1rem; opacity: 0.6; font-size: 0.9rem; }
 
     /* Responsive */
     @media (max-width: 900px) {
@@ -336,7 +317,7 @@
         <div class="feature-card mentor-card">
           <img src="./images/tenni-theurer.jpg" alt="Tenni Theurer" class="mentor-photo">
           <h3 style="margin-bottom: .5rem;">Tenni Theurer</h3>
-          <p style="margin-bottom: 1rem; font-size: .95rem;">Product-driven builder with experience leading $1.6B businesses and 500M+ users at Yahoo, Visa, and Verizon. From engineer to product leader, GM, and founder — scaling teams across startups and enterprises.</p>
+          <p style="margin-bottom: 1rem; font-size: .95rem;">Product-driven builder with experience leading $1.6B businesses and 500M+ users at Yahoo, Visa, and Verizon. From engineer to product, GM, and founder — scaling teams across startups and enterprises.</p>
           <a href="https://www.linkedin.com/in/tennitheurer/" target="_blank" style="color: #0f172a; text-decoration: none; font-weight: 600; font-size: .9rem;">View LinkedIn Profile →</a>
         </div>
       </div>
@@ -418,15 +399,12 @@
 
   <footer class="footer">
     <div class="container">
-      <div class="footer-content">
-        <p class="footer-privacy">We take privacy seriously. Your responses are stored to improve your experience, but never shared without your permission.</p>
-        <div class="footer-links">
-          <a href="https://aughthour.com/privacy-policy/" target="_blank">Privacy Policy</a>
-          <div class="footer-divider"></div>
-          <a href="https://www.aughthour.com/terms" target="_blank">Terms of Service</a>
-        </div>
-        <p class="footer-copyright">© 2025 Bell AI Fellows</p>
+      <p>We take privacy seriously. Your responses are stored to improve your experience, but never shared without your permission.</p>
+      <div class="footer-links">
+        <a href="https://aughthour.com/privacy-policy/" target="_blank">Privacy Policy</a>
+        <a href="https://www.aughthour.com/terms" target="_blank">Terms of Service</a>
       </div>
+      <p class="footer-copyright">© 2025 Bell AI Fellows</p>
     </div>
   </footer>
 </body>
