minor copy change

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <div class="feature-card mentor-card">
           <img src="./images/sunil-paul.jpg" alt="Sunil Paul" class="mentor-photo">
           <h3 style="margin-bottom: .5rem;">Sunil Paul</h3>
-          <p style="margin-bottom: 1rem; font-size: .95rem;">Serial entrepreneur and investor, pioneering mobility and climate ventures. Founded four companies with 10x+ returns. Investor and board member for five IPOs and four unicorns.</p>
+          <p style="margin-bottom: 1rem; font-size: .95rem;">Serial entrepreneur and investor, pioneering mobility and climate ventures. Founded four companies with 10x+ returns. Investor or board member for five IPOs and four unicorns.</p>
           <a href="https://www.linkedin.com/in/sunilpaul/" target="_blank" style="color: #0f172a; text-decoration: none; font-weight: 600; font-size: .9rem;">View LinkedIn Profile →</a>
         </div>
         <div class="feature-card mentor-card">
