removed word investment from sponsorshipp vocab

--- a/sponsorships.html
+++ b/sponsorships.html
@@ -318,10 +318,10 @@
     <section class="section">
       <div class="two-column">
         <div>
-          <h2>Your Investment Impact</h2>
-          <p>Your sponsorship investment delivers measurable returns through direct partnerships, talent access, and market positioning.</p>
+          <h2>Your Impact</h2>
+          <p>Your sponsorship delivers measurable returns through direct partnerships, talent access, and market positioning.</p>
           <p>Sponsorship directly funds Fellow stipends and program operations, ensuring we attract the most talented builders regardless of their financial situation.</p>
-          <p>More importantly, you're investing in the future of human-centered AI—applications that foster connection, creativity, and human flourishing rather than replacement.</p>
+          <p>More importantly, you're supporting in the future of human-centered AI—applications that foster connection, creativity, and human flourishing rather than replacement.</p>
         </div>
         <div>
           <h3>Program Budget Breakdown</h3>
