fixed link color

--- a/sponsorships.html
+++ b/sponsorships.html
@@ -58,13 +58,20 @@
     /* CTA */
     .cta-button {
       display: inline-flex; align-items: center; gap: 12px;
-      background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 50%, #ec4899 100%);
-      color: #fff; padding: 16px 28px; border: 0; border-radius: 16px;
-      font-size: 1.05rem; font-weight: 600; text-decoration: none; cursor: pointer;
+      background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 50%, #ec4899 100%) !important;
+      color: #fff !important; padding: 16px 28px; border: 0; border-radius: 16px;
+      font-size: 1.05rem; font-weight: 600; text-decoration: none !important; cursor: pointer;
       transition: transform .25s ease, box-shadow .25s ease;
       box-shadow: 0 10px 30px rgba(59,130,246,.3), 0 4px 15px rgba(139,92,246,.2);
     }
-    .cta-button:hover { transform: translateY(-3px) scale(1.02); }
+    .cta-button:hover { 
+      transform: translateY(-3px) scale(1.02); 
+      color: #fff !important;
+      text-decoration: none !important;
+    }
+    .cta-button:visited {
+      color: #fff !important;
+    }
 
     /* Headings and text */
     .section h2 {
